--- a/_posts/2025-06-022-இந்த ஒரு கவரால என்ன ஆகப்போகுது.markdown
+++ b/_posts/2025-06-022-இந்த ஒரு கவரால என்ன ஆகப்போகுது.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "இந்த ஒரு கவரால என்ன ஆகப்போகுது ?"
 date:   2025-06-22 15:38:39 +0530
 author: Hemamalini Sundaram
 ---
